credit-dispute-customer-notify-service/target/classes/META-INF/fabric8/openshift/credit-dispute-create-service-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=credit-dispute-create-service&var-version=1.0.0.0
  labels:
    app: credit-dispute-create-service
    provider: fabric8
    version: 1.0.0.0
    group: org.example
  name: credit-dispute-create-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: credit-dispute-create-service
    provider: fabric8
    group: org.example
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=credit-dispute-create-service&var-version=1.0.0.0
      labels:
        app: credit-dispute-create-service
        provider: fabric8
        version: 1.0.0.0
        group: org.example
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"undertow":{"io-threads":1, "worker-threads":2 }}}'
        - name: BOOTSTRAP_SERVERS
          value: demo-cluster-kafka-bootstrap:9092
        - name: DISPUTE_SUBMITTED_TOPIC
          value: credit-dispute-submitted
        - name: DISPUTE_RESOLVED_TOPIC
          value: credit-dispute-resolved
        - name: CUSTOMER_CONTACT_TOPIC
          value: credit-dispute-customer-contact
        - name: CUSTOMER_MERCHANT_TOPIC
          value: credit-dispute-merchant-contact
        - name: CONSUMER_MAX_POLL_RECORDS
          value: "500"
        - name: CONSUMER_COUNT
          value: "1"
        - name: CONSUMER_SEEK_TO
          value: end
        - name: CONSUMER_GROUP
          value: credit-dispute-create-service
        - name: ACKS
          value: "1"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: example/credit-dispute-create-service:1.0.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "0.5"
            memory: 256Mi
          requests:
            cpu: "0.1"
            memory: 256Mi
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
