credit-dispute-customer-notify-service/target/classes/META-INF/fabric8/openshift/credit-dispute-create-service-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: credit-dispute-create-service
    provider: fabric8
    version: 1.0.0.0
    group: org.example
  name: credit-dispute-create-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: credit-dispute-create-service
